--- a/style.scss
+++ b/style.scss
@@ -194,10 +194,10 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+  font-family: $roboto;
+  font-weight: normal;
+  font-size: 30px;
+  
 }
 
 .site-description {
