--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,7 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 $roboto: "Roboto", Arial, sans-serif;
+$ptserif: "PT Serif", Times New Roman, serif;
 
 // Mobile breakpoints
 @mixin mobile {
